<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="bet"
            type="com.example.android.kevkane87.matchedbetapp.MatchedBetDataItem" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/reminderCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="@dimen/padding_medium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/back_tint"
            android:padding="@dimen/padding_medium">

            <TextView
                android:id="@+id/back_odds"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/back_input"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                app:doubleToString="@{bet.bookiesOdds}"
                app:layout_constraintEnd_toStartOf="@+id/lay_odds"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lay_odds"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:background="@drawable/lay_input"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                app:doubleToString="@{bet.exchangeOdds}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_rating"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/profit_loss"
                app:layout_constraintEnd_toEndOf="@+id/lay_odds"
                app:layout_constraintStart_toStartOf="@+id/back_odds"
                app:layout_constraintTop_toBottomOf="@+id/back_odds" />

            <TextView
                android:id="@+id/rating"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:doubleToCurrencyString="@{bet.profit}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/back_odds"
                app:layout_constraintTop_toBottomOf="@+id/label_rating"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/label_bet_type_item"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bet_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_bet_stake_item"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/bet_stake"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_bet_type_item" />

            <TextView
                android:id="@+id/bet_type_item"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:fontFamily="@font/roboto"
                android:text="@{bet.betType}"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/label_bet_stake_item"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/back_bet_stake_item"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                app:doubleToCurrencyString="@{bet.bookiesStake}"
                app:layout_constraintStart_toEndOf="@+id/label_bet_stake_item"
                app:layout_constraintTop_toBottomOf="@+id/bet_type_item" />

            <TextView
                android:id="@+id/event_item"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@{bet.betEvent}"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_bet_stake_item" />

            <TextView
                android:id="@+id/outcome_item"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@{bet.betOutcome}"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>